# ironflow

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cloudformation/: ironflow.yaml
.examples/: init.sql  pg_hba.conf  postgres-source.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
resources/: auth.yaml
resources/config/: local.yaml
resources/workflows/: opsgenie.yaml  opsgenie_chain.yaml  opsgenie_loop.yaml  test.yaml  workflow.yaml
src/: engine.rs  main.rs  model.rs
src/api/: routes.rs
src/auth/: http.rs  mod.rs  provider.rs
src/aws_lambda/: client.rs
src/config/: configuration.rs  git_adapters.rs  mod.rs
src/execution/: assertion.rs  branch.rs  condition.rs  context.rs  execution.rs  execution_tests.rs  loop_execution.rs  mod.rs  model.rs  step.rs
src/expression/: custom_functions.rs  expression.rs  mod.rs
src/http/: http.rs
src/in_memory/: adapters.rs
src/json/: json.rs
src/listener/: listener.rs  mod.rs  queue.rs
src/listener/sqs/: mod.rs  sqs_poller.rs
src/persistence/: mod.rs  model.rs  persistence.rs
src/persistence/dynamodb/: adapter.rs  repository.rs
src/secret/: secrets.rs
src/yaml/: yaml.rs
