[package]
name = "ironflow"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "3.3.2"
jmespath = "0.3.0"
reqwest = { version = "0.12.12", features = ["json"]}
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = {version = "1.15.1", features = ["v4"]}
serde = { version = "1.0.218", features = ["derive"] }
clap = { version = "4.5.31", features = ["derive"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-dynamodb = "1.66.0"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.61.0"
